kubernetes/kustomize/openapi-validator/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openapi-validator
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: openapi-validator
